# AI-Powered-agent-workflow

./: Dockerfile  README.md  check_status.py  docker-compose.yml  pyproject.toml  requirements.txt  status.json  test_debug.py  test_gemini_llm.py  test_mcp.py  test_request.py
config/: sentinel.yaml
dashboard/: index.html
dashboard/css/: dashboard.css
dashboard/js/: app.js  dag-visualizer.js  metrics.js  websocket.js
scripts/: run_strict_p2p_live.py
sentinel_ai/: __init__.py  config.py  main.py
sentinel_ai/agents/: base.py  decision.py  execution.py  intake.py  monitoring.py  orchestrator.py  policy.py  recovery.py  reliability_guard.py  supervisor.py  verification.py
sentinel_ai/api/: agents.py  audit.py  websocket.py  workflows.py
sentinel_ai/core/: dag.py  engine.py  event_bus.py  scheduler.py  state.py
sentinel_ai/integrations/: base.py  local_system.py  mcp_adapter.py  mock_adapters.py
sentinel_ai/models/: audit.py  database.py  schemas.py  workflow.py
sentinel_ai/utils/: crypto.py  logger.py  metrics.py
sentinel_ai/workflows/: contract_clm.py  meeting_intel.py  onboarding.py  p2p.py
tests/: test_agents.py  test_audit.py  test_engine.py  test_logger.py  test_workflows.py
